# CMAKE

./: Readme.md
demo1/: CMakeLists.txt  demo1  main.cpp
demo2/: main.cpp  mymath.cpp
demo3/: demo.cpp
demo3/mylib/: CMakeLists.txt  Makefile  cmake_install.cmake  mymath.cpp  mymath.hpp
demo4/mylib/: mymath.cpp  mymath.hpp
demo4/src/: CMakeLists.txt  demo.cpp
demo5/: CMakeLists.txt
demo5/mylib/: CMakeLists.txt  mymath.cpp  mymath.hpp
demo5/src/: CMakeLists.txt  demo.cpp
