set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#设置可执行文件的位置
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#ADD_DEFINITIONS(-DUSE_MYMATH)

#向工程添加多个特定的头文件搜索路径，PROJECT_SOURCE_DIR表示根目录路径
AUX_SOURCE_DIRECTORY(./ DIR_SRCS)

ADD_EXECUTABLE(demo5 ${DIR_SRCS})

TARGET_LINK_LIBRARIES(demo5 Mylib)